Fix .workflow-columns height on Firefox
[finishes #158034835]

--- a/assets/css/components/WorkflowPage.scss
+++ b/assets/css/components/WorkflowPage.scss
@@ -31,6 +31,8 @@
     display: flex;
     flex-direction: row;
     background-color: $WF-background;
+
+    overflow: hidden; // height determined by parent, not children. https://www.pivotaltracker.com/story/show/158034835
   }
 
   .workflow-root.in-lesson .workflow-columns {
